--- a/app/src/main/res/layout/activity_editprofil.xml
+++ b/app/src/main/res/layout/activity_editprofil.xml
@@ -18,6 +18,7 @@
 
 
         <Button
+            android:id="@+id/backprofil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -39,23 +40,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/topbar">
 
-        <TextView
-            android:id="@+id/fotoprofiltxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:fontFamily="@font/inter_regular"
-            android:text="Foto Profil"
-            android:textSize="18sp" />
-
         <ImageView
             android:id="@+id/fotoprofil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/fotoprofiltxt"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:src="@drawable/profil_viewbadag" />
 
         <RelativeLayout
@@ -82,13 +72,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/namauserlbl"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/notsoroundedbtn"
                 android:ems="10"
                 android:fontFamily="@font/inter_regular"
+                android:hint="Nama Pengguna..."
+                android:paddingStart="10dp"
                 android:inputType="textPersonName"
-                android:text=" "
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/genderlbl"
@@ -107,13 +98,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/genderlbl"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
+                android:paddingStart="10dp"
                 android:background="@drawable/notsoroundedbtn"
                 android:ems="10"
                 android:fontFamily="@font/inter_regular"
                 android:inputType="textPersonName"
-                android:text=" "
-                android:textColor="@color/white" />
+                android:hint="Email..."
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/telplbl"
@@ -132,13 +124,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/telplbl"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
+                android:paddingStart="10dp"
                 android:background="@drawable/notsoroundedbtn"
                 android:ems="10"
                 android:fontFamily="@font/inter_regular"
                 android:inputType="textPersonName"
-                android:text=" "
-                android:textColor="@color/white" />
+                android:hint="No Telepon..."
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/nislbl"
@@ -148,7 +141,7 @@
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/inter_regular"
                 android:labelFor="@id/radioGrp"
-                android:text="Gender"
+                android:text="Jenis Kelamin"
 
                 android:textSize="16sp" />
 
@@ -161,30 +154,30 @@
                 android:paddingRight="8dp"
                 android:layout_below="@id/nislbl"
                 >
+
                 <RadioButton
                     android:id="@+id/radioM"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:checked="false"
-                    android:layout_weight="1"
-                    android:textSize="14sp"
+                    android:layout_gravity="start"
+                    android:layout_weight="0.5"
                     android:buttonTint="@color/main"
+                    android:checked="false"
                     android:fontFamily="@font/inter_regular"
                     android:text="Pria"
-                    />
+                    android:textSize="14sp" />
+
                 <RadioButton
                     android:id="@+id/radioF"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:checked="false"
+                    android:layout_gravity="start"
                     android:layout_weight="1"
-                    android:textSize="14sp"
                     android:buttonTint="@color/main"
+                    android:checked="false"
                     android:fontFamily="@font/inter_regular"
                     android:text="Wanita"
-                    />
+                    android:textSize="14sp" />
             </RadioGroup>
 
 
