--- a/app/src/main/res/layout/activity_editprofil.xml
+++ b/app/src/main/res/layout/activity_editprofil.xml
@@ -29,7 +29,6 @@
             android:textAllCaps="false" />
 
     </RelativeLayout>
-
     <RelativeLayout
         android:id="@+id/wrapperinp"
         android:layout_width="match_parent"
@@ -40,27 +39,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/topbar">
 
-        <ImageView
-            android:id="@+id/fotoprofil"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/profil_viewbadag" />
-
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/fotoprofil"
             android:layout_marginTop="35dp"
             android:paddingStart="25dp"
             android:paddingEnd="45dp">
 
+            <TextView
+                android:id="@+id/mi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit Profil"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/namauserlbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/mi"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/inter_regular"
                 android:labelFor="@id/namauserlbl"
                 android:text="Nama Pengguna"
@@ -77,9 +76,10 @@
                 android:ems="10"
                 android:fontFamily="@font/inter_regular"
                 android:hint="Nama Pengguna..."
-                android:paddingStart="10dp"
                 android:inputType="textPersonName"
-                android:textColor="@color/black" />
+                android:paddingStart="10dp"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/genderlbl"
@@ -105,7 +105,8 @@
                 android:hint="Email..."
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/telplbl"
@@ -131,7 +132,8 @@
                 android:hint="No Telepon..."
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/nislbl"
@@ -149,15 +151,14 @@
                 android:id="@+id/radioGrp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/nislbl"
                 android:orientation="horizontal"
                 android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_below="@id/nislbl"
-                >
+                android:paddingRight="8dp">
 
                 <RadioButton
                     android:id="@+id/radioM"
-                    android:layout_width="0dp"
+                    android:layout_width="102dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:layout_weight="0.5"
@@ -181,18 +182,84 @@
             </RadioGroup>
 
 
+            <TextView
+                android:id="@+id/mii"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/radioGrp"
+                android:layout_marginTop="20dp"
+                android:text="Ganti Kata Sandi"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/sandilamalbl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/mii"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/inter_regular"
+                android:labelFor="@id/sandilamainp"
+                android:text="Sandi Lama"
+
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/sandilamainp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/sandilamalbl"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/notsoroundedbtn"
+                android:ems="10"
+                android:fontFamily="@font/inter_regular"
+                android:hint="Sandi Lama..."
+                android:inputType="textPersonName"
+                android:paddingStart="10dp"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/sandibarulbl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/sandilamainp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/inter_regular"
+                android:labelFor="@id/sandilamainp"
+                android:text="Sandi Baru"
+
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/sandibaruinp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/sandibarulbl"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/notsoroundedbtn"
+                android:ems="10"
+                android:fontFamily="@font/inter_regular"
+                android:hint="Sandi Baru..."
+                android:inputType="textPersonName"
+                android:paddingStart="10dp"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
         </RelativeLayout>
+
+
 
 
 
     </RelativeLayout>
 
 
+
     <Button
         android:id="@+id/btnedit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="42dp"
         android:layout_marginEnd="35dp"
         android:text="Simpan"
         android:textAllCaps="false"
