--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -29,7 +29,7 @@
 
         <RelativeLayout
             android:id="@+id/profilwrap"
-            android:layout_width="wrap_content"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:background="@drawable/wrapper_profil"
@@ -45,7 +45,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:fontFamily="@font/inter_bold"
-                android:text="Asep"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Rizqi Maulana Sholihudinnnnnn"
                 android:textSize="22sp" />
 
 
@@ -55,7 +57,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/namaProfile"
                 android:layout_marginTop="5dp"
+                android:ellipsize="end"
                 android:fontFamily="@font/inter_bold"
+
+                android:maxLines="1"
                 android:text="asepusep@gmail.com"
                 android:textSize="16sp" />
 
@@ -68,6 +73,9 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/inter_regular"
                 android:text="0896969555"
+
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textSize="22sp" />
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
