--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
-            android:src="@drawable/profil_view" />
+            android:src="@drawable/ic_baseline_account_circle_24" />
 
         <TextView
             android:id="@+id/namaAkun"
