Menambahkan Fitur Ganti Password

--- a/app/src/main/res/layout/activity_editprofil.xml
+++ b/app/src/main/res/layout/activity_editprofil.xml
@@ -277,17 +277,30 @@
 
 
 
-    <Button
+
+            <Button
         android:id="@+id/btnedit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="35dp"
         android:layout_marginStart="35dp"
         android:text="Simpan"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wrapperinp" />
+
+            <Button
+                android:id="@+id/btngantipassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="265dp"
+                android:layout_marginTop="-115dp"
+                android:layout_marginEnd="35dp"
+                android:text="Ganti"
+                android:textAllCaps="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/wrapperinp" />
 
 
         </LinearLayout>
